# NemoHeadUnit

./: .env  .gitignore  CMakeLists.txt  README.md  __init__.py
aasdk_proto/: WifiInfoRequestMessage_pb2.py  WifiSecurityResponseMessage_pb2.py
aasdk_proto/aap_protobuf/aaw/: MessageId_pb2.py  Status_pb2.py  WifiConnectionStatus_pb2.py  WifiInfoResponse_pb2.py  WifiStartRequest_pb2.py  WifiVersionRequest_pb2.py
aasdk_proto/aap_protobuf/channel/control/: GalVerificationBugReportRequest_pb2.py  GalVerificationDisplayInformationRequest_pb2.py  GalVerificationScreenCaptureRequest_pb2.py  GalVerificationScreenCaptureResponse_pb2.py  GoogleDiagnosticsBugReportResponse_pb2.py  GoogleDiagnosticsVendorExtensionMessageId_pb2.py  SessionConfiguration_pb2.py
aasdk_proto/aap_protobuf/service/: Service_pb2.py
aasdk_proto/aap_protobuf/service/bluetooth/: BluetoothMessageId_pb2.py  BluetoothService_pb2.py
aasdk_proto/aap_protobuf/service/bluetooth/message/: BluetoothAuthenticationResult_pb2.py  BluetoothPairingMethod_pb2.py  BluetoothPairingRequest_pb2.py
aasdk_proto/aap_protobuf/service/control/message/: AudioFocusNotification_pb2.py  AudioFocusRequestType_pb2.py  AudioFocusStateType_pb2.py  AuthResponse_pb2.py  BatteryStatusNotification_pb2.py  ByeByeReason_pb2.py  ByeByeRequest_pb2.py  CarConnectedDevicesRequest_pb2.py  ChannelOpenRequest_pb2.py  FragInfo_pb2.py  (+12 more)
aasdk_proto/aap_protobuf/service/genericnotification/: GenericNotificationMessageId_pb2.py  GenericNotificationService_pb2.py
aasdk_proto/aap_protobuf/service/inputsource/: InputSourceService_pb2.py
aasdk_proto/aap_protobuf/service/mediabrowser/: MediaBrowserService_pb2.py
aasdk_proto/aap_protobuf/service/mediaplayback/: MediaPlaybackStatusMessageId_pb2.py  MediaPlaybackStatusService_pb2.py
aasdk_proto/aap_protobuf/service/navigationstatus/: NavigationStatusMessageId_pb2.py  NavigationStatusService_pb2.py
aasdk_proto/aap_protobuf/service/phonestatus/: PhoneStatusMessageId_pb2.py  PhoneStatusService_pb2.py
aasdk_proto/aap_protobuf/service/sensorsource/: SensorSourceService_pb2.py
aasdk_proto/aap_protobuf/service/vendorextension/: VendorExtensionService_pb2.py
aasdk_proto/aap_protobuf/service/wifiprojection/: WifiProjectionService_pb2.py
aasdk_proto/aap_protobuf/shared/: InstrumentClusterInput_pb2.py  MessageStatus_pb2.py  PhoneInfo_pb2.py
app/: __init__.py  config.py  main.py  nemo_core.py  orchestrator.py
app/core/: __init__.py  channel_manager.py  logging.hpp  py_logging.py  transport_stack.py  usb_hub_manager.py
app/media/: av_core.hpp  av_core_binding.hpp  av_types.hpp  av_utils.hpp  gst_audio_pipeline.hpp  gst_mic_capture.hpp  gst_video_pipeline.hpp
app/ui/: __init__.py  logging_modules.json  main_window.py
app/ui/modules/: __init__.py  android_auto.py  base.py  config_module.py  disconnected.py  footer.py  header.py  keyboard.py  settings.py
docs/: CHANNEL_GAPS.md  DEPENDENCY_MAP.md  EVENT_HANDLER_GUIDE.md  POC_REFACTOR_CHECKLIST.md  REMAINING_WORK.md  aasdk_guide.md  codebase_analysis_chunk5.md  codebase_analyze_chunk_1.md  codebase_analyze_chunk_2.md  codebase_analyze_chunk_3.md  codebase_analyze_chunk_4.md  codebase_porting.md  phase5_video_rendering.md
external_bindings/: aasdk_usb.hpp  channels.hpp  cryptor.hpp  io_context_runner.hpp  logger_binding.cpp  messenger.hpp  transport.hpp  usb_context.hpp
handlers/: __init__.py
handlers/audio/: __init__.py  audio_event_handler.hpp  audio_event_handler.py
handlers/bluetooth/: __init__.py  bluetooth_event_handler.hpp  bluetooth_event_handler.py
handlers/common/: event_binding.hpp  event_handler_utils.hpp  protobuf_message.hpp
handlers/control/: __init__.py  control_event_handler.hpp  control_event_handler.py
handlers/control/control_modules/: __init__.py  focus.py  handshake.py  proto.py  service_discovery.py  utils.py
handlers/generic_notification/: __init__.py  generic_notification_event_handler.hpp  generic_notification_event_handler.py
handlers/input/: __init__.py  input_event_handler.hpp  input_event_handler.py
handlers/media_browser/: __init__.py  media_browser_event_handler.hpp  media_browser_event_handler.py
handlers/media_playback_status/: __init__.py  media_playback_status_event_handler.hpp  media_playback_status_event_handler.py
handlers/media_source/: __init__.py  media_source_event_handler.hpp  media_source_event_handler.py
handlers/navigation/: __init__.py  navigation_event_handler.hpp  navigation_event_handler.py
handlers/phone_status/: __init__.py  phone_status_event_handler.hpp  phone_status_event_handler.py
handlers/radio/: __init__.py  radio_event_handler.hpp  radio_event_handler.py
handlers/sensor/: __init__.py  sensor_event_handler.hpp  sensor_event_handler.py
handlers/vendor_extension/: __init__.py  vendor_extension_event_handler.hpp  vendor_extension_event_handler.py
handlers/video/: __init__.py  video_event_handler.hpp  video_event_handler.py
handlers/wifi_projection/: __init__.py  wifi_projection_event_handler.hpp  wifi_projection_event_handler.py
python/: cryptor.py  test.py  test_core.py  test_headless.py  test_interactive_phase4.py  test_phase2.py  test_phase3.py  test_phase3_interactive.py  test_phase5_dump.py
python/aasdk_proto/: WifiChannelMessageIdsEnum_pb2.py  WifiInfoResponseMessage_pb2.py
python/aasdk_proto/aap_protobuf/aaw/: WifiInfoRequest_pb2.py  WifiStartResponse_pb2.py  WifiVersionResponse_pb2.py
python/app/: crypto_manager.py
python/ui/: __init__.py  main_window.py
scripts/: generate_protos.sh
src/: binding.cpp  test_headless.cpp
src/core/: io_context_runner.hpp
src/crypto/: crypto_manager.cpp  crypto_manager.hpp
src/gst/: gst_pipeline.hpp  gst_video_sink.hpp
src/python/: py_orchestrator.hpp
src/session/: audio_event_handler.hpp  control_event_handler.hpp  input_event_handler.hpp  iorchestrator.hpp  navigation_event_handler.hpp  sensor_event_handler.hpp  session_manager.hpp  video_event_handler.hpp
src/usb/: aasdk_logger.hpp  libusb_context.cpp  libusb_context.hpp  usb_hub_manager.cpp  usb_hub_manager.hpp
tests/: smoke_tests.py
(+194 files in other folders)
